...
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/myrestaurant"
        android:textColor="@color/colorTextIcons"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findRestaurantButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="Enter Zip Code"
        android:background="@color/colorDivider"
        android:ems="10"
        android:fontFamily="@font/aguafina_script"
...
